create front page and gradient animation

--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,144 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+:root {
+    --greenGrad: linear-gradient(7deg, rgb(60, 255, 0), rgb(0, 238, 255));
+    --orangeGrad: linear-gradient(7deg, rgb(255, 0, 170),  rgb(255, 153, 0));
+
+    --gameGrad1: rgb(60, 255, 0);
+    --gameGrad2: rgb(0, 238, 255);
+    --devGrad1: rgb(255, 0, 170);
+    --devGrad2: rgb(255, 153, 0);
+    --testGrad1: rgb(255, 0, 170);
+    --testGrad2: rgb(255, 153, 0);
+
+    --background: #202330;
+    --textColour: rgb(198, 206, 218);
+    --deactiveColour: #303441;
+}
+@property --currGrad1 {
+    syntax: '<color>';
+    initial-value: rgb(255, 0, 170);
+    inherits: false;
+   }
+@property --currGrad2 {
+    syntax: '<color>';
+    initial-value: rgb(255, 153, 0);
+    inherits: false;
+   }
+
+.Head {
+    margin-top: 1em;
+    color: var(--textColour);
+    background-clip: text;
+    margin-left: auto;
+    margin-right:auto;
+    font-size: 3rem;
+    letter-spacing: 0.2em;
+    text-align: center;
+    border-bottom: none;
+    position: relative;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 6rem 8rem 6rem 8rem 6rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+html {
+    min-height: 100%;
+    font-family: Verdana;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Name {
+    font-size: 4rem;
+    grid-row: 2/3;
+    margin: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.NavBarElement {
+    background: linear-gradient(7deg, var(--currGrad1), var(--currGrad2)); 
+    width:fit-content;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin: 5% 10% 0% 5%;
+    font-size: 200%;
+    grid-row: 1/2;
+    transition: --currGrad1 0.5s, --currGrad2 0.5s;
+    --currGrad1: var(--testGrad1);
+    --currGrad2: var(--testGrad2);
+    
 }
 
-.card {
-  padding: 2em;
+
+.NavBar {
+    display: grid;
+    background: linear-gradient(var(--background) 50%, rgba(0,0,0,0));
+    grid-template-columns: 20% 20% 15% 15% 15% 15%;
+    grid-template-rows: 98% 2%;
+    width: 100%;
+    height: 8em;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 2;
+    
 }
 
-.read-the-docs {
-  color: #888;
+.NavLine {
+    background: linear-gradient(350deg, var(--currGrad1) 33%, var(--currGrad2) 66%, rgba(0,0,0,0) 85%);
+    bottom: 2;
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    right: 0;
+    position: fixed;
+    z-index: 2;
+    top: 4em;
+    transition: --currGrad1 0.5s, --currGrad2 0.5s;
+    --currGrad1: var(--testGrad1);
+    --currGrad2: var(--testGrad2);
+}
+
+.Software {
+    background: var(--greenGrad);
+    width:fit-content;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin: auto;
+    font-size: 9rem;
+    grid-row: 4/5;
+    grid-column: 1/2;
+}
+
+.Game {
+    /* background: var(--orangeGrad); */
+    /* -webkit-text-fill-color: transparent; */
+    color: var(--deactiveColour);
+    width:fit-content;
+    background-clip: text;
+    margin: auto;
+    bottom: 25%;
+    right: 35%;
+    font-size: 9rem;
+    z-index: -1;
+    grid-row: 4/5;
+    grid-column: 1/2;
+}
+
+body {
+    background-color: #202330;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.test {
+    margin: auto;
+    width: 100px;
+    height: 100px;
+    background: var(--blueGrad);
+}
+
+.test2 {
+    background: linear-gradient(7deg, rgb(255, 0, 170),  rgb(255, 153, 0));
+    width:fit-content;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin: auto;
+    font-size: 5em;
 }
